// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Toolbar
    align="start"
  >
    <div
      className="toolbar start-align orion-fusion-theme"
      role="toolbar"
    />
  </Toolbar>
</ThemeContextProvider>
`;

exports[`Toolbar should render a default component 1`] = `
<div
  className="toolbar start-align"
  role="toolbar"
/>
`;

exports[`Toolbar should render center aligned component 1`] = `
<div
  className="toolbar center-align"
  role="toolbar"
/>
`;

exports[`Toolbar should render component with aria-controls 1`] = `
<div>
  <Toolbar
    align="start"
    ariaControls="test-id"
  />
  <div
    id="test-id"
  >
    Sample toolbar content
  </div>
</div>
`;

exports[`Toolbar should render component with aria-label 1`] = `
<div
  aria-label="test"
  className="toolbar start-align"
  role="toolbar"
/>
`;

exports[`Toolbar should render component with aria-labelledby 1`] = `
<div>
  <h4
    id="test-id"
  >
    Test
  </h4>
  <Toolbar
    align="start"
    ariaLabelledBy="test-id"
  />
</div>
`;

exports[`Toolbar should render end aligned component 1`] = `
<div
  className="toolbar end-align"
  role="toolbar"
/>
`;

exports[`Toolbar should render start aligned component 1`] = `
<div
  className="toolbar start-align"
  role="toolbar"
/>
`;

exports[`Toolbar should render with children 1`] = `
<div
  className="toolbar start-align"
  role="toolbar"
>
  <div
    className="item"
    key=".0"
  >
    <div>
      test
    </div>
  </div>
</div>
`;
